--- a/src/components/sheet/sheet.scss
+++ b/src/components/sheet/sheet.scss
@@ -3,7 +3,7 @@
 body {
   font-family: "Pieces of Eight", sans-serif;
   font-size: 2.2rem;
-  background: url("/low_contrast_linen.png");
+  background: url("/rpg-sheets/low_contrast_linen.png");
 }
 
 input {
@@ -15,7 +15,7 @@ input {
   height: 1131px;
   margin: 30px auto 60px;
   padding: 40px 50px;
-  background: url("/noise.jpg");
+  background: url("/rpg-sheets/noise.jpg");
 }
 
 .top-info {
