--- a/src/components/print/print.scss
+++ b/src/components/print/print.scss
@@ -9,7 +9,7 @@
 body {
   font-family: "Pieces of Eight", sans-serif;
   font-size: 2.2rem;
-  background: url("/rpg-sheets/low_contrast_linen.png");
+  background: url("/low_contrast_linen.png");
 }
 
 .picture {
@@ -28,7 +28,7 @@ body {
   height: 1131px;
   margin: 30px auto 60px;
   padding: 10px 50px;
-  background: url("/rpg-sheets/noise.jpg");
+  background: url("/noise.jpg");
   overflow: hidden;
 }
 
